Patch Notes feat: card terminado e com rota implementada feat: começo do header

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,7 +1,11 @@
 <!-- Louvado seja o Senhor -->
 
-<a>
+<a [href]="href">
     <div>
-        <ng-content/>
+        <ng-content select="[card-img]"/>
+    </div>
+
+    <div>
+        <ng-content select="[card-title]"/>
     </div>
 </a>
