--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<!-- Louvado seja o Senhor -->
+
+<nav>
+    <i class="ph ph-user"></i>
+    <div>
+        <ul>
+            <a href="">home</a>
+            <a href="">vendas</a>
+            <a href="">estoque</a>
+        </ul>
+    </div>
+    <i class="ph ph-sign-out"></i>
+</nav>
