--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,2 +1,15 @@
 /* Louvado seja o Senhor */
 
+.card-section{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card .ph{
+    font-size: 8rem;
+}
+
+.card-title p{
+    font-size: 2.5rem;
+    text-align: center;
+}
