--- a/src/app/shared/card/card.component.css
+++ b/src/app/shared/card/card.component.css
@@ -3,6 +3,12 @@
 a{
     display: flex;
     justify-content: space-evenly;
-    background-color: aliceblue;
-
+    align-items: center;
+    width: 30rem;
+    height: 10rem;
+    border: 2px solid var(--tertiary-color);
+    border-radius: 8px;
+    background-color: var(--card-bg-color);
+    text-decoration: none;
+    color: var(--secondary-color);
 }
