--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,9 @@
 :root{
     --primary-color: #fff;
     --secondary-color: #000;
-    --tertiary-color: rgb(70, 220, 70);
+    --tertiary-color: rgb(70, 200, 70);
+    
+    --card-bg-color: #F1F3E0;
 }
 
 *{
