Patch Notes feat: criação do componente de estoque feat: criação do componente de table do estoque

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,11 @@
 /* Louvado seja o Senhor */
 
+body{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
 .card-section{
     display: flex;
     justify-content: space-evenly;
