--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,21 +1,25 @@
 <!-- Louvado seja o Senhor -->
-<header>
-    <app-header/>
-</header>
-<main>
-    <section class="card-section">
-        <app-card href="/login" class="card">
-            <i class="ph ph-coin-vertical" card-img></i>
-            <div card-title class="card-title">
-                <p>Relatório de Vendas</p>
-            </div>
-        </app-card>
-        
-        <app-card href="/home" class="card">
-            <i class="ph ph-package" card-img></i>
-            <div card-title class="card-title">
-               <p>Estoque</p>
-            </div>
-        </app-card>
-    </section>
-</main>
+
+<body>
+    <header>
+        <app-header/>
+    </header>
+    
+    <main>
+        <section class="card-section">
+            <app-card href="" class="card">
+                <i class="ph ph-coin-vertical" card-img></i>
+                <div card-title class="card-title">
+                    <p>Relatório de Vendas</p>
+                </div>
+            </app-card>
+            
+            <app-card href="/estoque" class="card">
+                <i class="ph ph-package" card-img></i>
+                <div card-title class="card-title">
+                <p>Estoque</p>
+                </div>
+            </app-card>
+        </section>
+    </main>
+</body>
