--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,9 +4,9 @@
     <i class="ph ph-user"></i>
     <div>
         <ul>
-            <a href="">home</a>
-            <a href="">vendas</a>
-            <a href="">estoque</a>
+            <a href="/home">Home</a>
+            <a href="">Vendas</a>
+            <a href="/estoque">Estoque</a>
         </ul>
     </div>
     <i class="ph ph-sign-out"></i>
