feat: criação do componente compartilhado table e implementação no estoque

--- a/src/app/pages/estoque/estoque.component.html
+++ b/src/app/pages/estoque/estoque.component.html
@@ -3,5 +3,36 @@
 <body>
     <app-header/>
 
-    <app-produtos-table/>
+    <main>
+        <div class="actions-div">
+            <a href="">Adicionar Produto</a>
+
+            <div class="filters-div">
+                <label for="search">
+                    <input type="text" name="search" id="search">
+                    <i class="ph ph-magnifying-glass"></i>
+                </label>
+
+                <i class="ph ph-funnel"></i>
+            </div>
+        </div>
+        
+        <app-table>
+            <tr table-header>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Valor Unitário</th>
+                <th>Valor do Kg</th>
+                <th>Categoria</th>
+            </tr>
+            
+            <tr table-data>
+                <td>ID</td>
+                <td>Nome</td>
+                <td>Valor Unitário</td>
+                <td>Valor do Kg</td>
+                <td>Categoria</td>
+            </tr>
+        </app-table>
+    </main>
 </body>
