--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -5,3 +5,20 @@ body{
     flex-direction: column;
     gap: 4rem;
 }
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.actions-div{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.filters-div{
+    display: flex;
+    gap: 2rem;
+}
