--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,7 @@
     --primary-color: #fff;
     --secondary-color: #000;
     --tertiary-color: rgb(70, 200, 70);
-    
-    --card-bg-color: #F1F3E0;
+    --highlight-color: #F1F3E0;
 }
 
 *{
