Patch Notes: feat: criação do componente vendas refactor: tamanho da table definida via input

--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -12,13 +12,6 @@ main{
     align-items: center;
 }
 
-.actions-div{
+.table{
     width: 90%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.filters-div{
-    display: flex;
-    gap: 2rem;
 }
