--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
     
     <main>
         <section class="card-section">
-            <app-card href="" class="card">
+            <app-card href="/vendas" class="card">
                 <i class="ph ph-coin-vertical" card-img></i>
                 <div card-title class="card-title">
                     <p>Relatório de Vendas</p>
