--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
     <div>
         <ul>
             <a href="/home">Home</a>
-            <a href="">Vendas</a>
+            <a href="/vendas">Vendas</a>
             <a href="/estoque">Estoque</a>
         </ul>
     </div>
