Patch Notes feat: criação dos models para padronização dos dados refactor: tamanho das células das tabelas generalizados

--- a/src/app/pages/vendas/vendas.component.css
+++ b/src/app/pages/vendas/vendas.component.css
@@ -1,1 +1,10 @@
 /* Louvado seja o Senhor */
+
+.tables-section{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* tr th, tr td{
+    padding: 4rem;
+} */
