--- a/src/app/pages/vendas/vendas.component.html
+++ b/src/app/pages/vendas/vendas.component.html
@@ -3,5 +3,39 @@
 <app-header/>
 
 <main>
-    
+    <section class="tables-section">
+        <app-table width="40vw">
+            <p btn-text>Adicionar registro de venda</p>
+
+            <tr table-header>
+                <th>Nome do comprador</th>
+                <th>Valor da compra</th>
+                <th>Tipo da compra</th>
+                <th>Data da venda</th>
+            </tr>
+
+            <tr table-data>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+        </app-table>
+        
+        <app-table width="40vw">
+            <p btn-text>Ver lista de devedores</p>
+
+            <tr table-header>
+                <th>Nome do devedor</th>
+                <th>Valor da dívida</th>
+                <th>Data da dívida</th>
+            </tr>
+
+            <tr table-data>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+        </app-table>
+    </section>
 </main>
