refactor: botão da table recebe funções via Input agora

--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -2,7 +2,7 @@
 
 <section [style.width]="width">
     <div class="actions-div">
-        <button>
+        <button (click)="clickFunc">
             <ng-content select="[btn-text]"/>
         </button>
 
