feat: implementação dos inputs e button no modal para adição de novos produtos (ainda sem backend)

--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -15,3 +15,16 @@ main{
 .table{
     width: 90%;
 }
+
+.input-div{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    padding: 1.5rem 0;
+}
+
+.button-div{
+    display: flex;
+    justify-content: flex-end;
+}
