--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -2,9 +2,9 @@
 
 <section [style.width]="width">
     <div class="actions-div">
-        <button (click)="clickFunc">
+        <app-button [action]="clickFunc">
             <ng-content select="[btn-text]"/>
-        </button>
+        </app-button>
 
         <div class="filters-div">
             <label for="search">
