--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
 <!-- Louvado seja o Senhor -->
 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <header>
         <app-header/>
@@ -23,3 +30,4 @@
         </section>
     </main>
 </body>
+</html>
