--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -10,6 +10,6 @@
         <i class="ph ph-x" (click)="closeModal()"></i>
     </header>
     <main>
-        <ng-content select="[modal-form]"/>
+        <ng-content select="[modal-content]"/>
     </main>
 </dialog>
