--- a/src/app/pages/vendas/vendas.component.css
+++ b/src/app/pages/vendas/vendas.component.css
@@ -1,10 +1,13 @@
 /* Louvado seja o Senhor */
 
+body{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
 .tables-section{
     display: flex;
     justify-content: space-evenly;
 }
 
-/* tr th, tr td{
-    padding: 4rem;
-} */
