--- a/src/app/pages/vendas/vendas.component.html
+++ b/src/app/pages/vendas/vendas.component.html
@@ -1,41 +1,55 @@
 <!-- Louvado seja o Senhor -->
 
-<app-header/>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <app-header/>
 
-<main>
-    <section class="tables-section">
-        <app-table width="40vw">
-            <p btn-text>Adicionar registro de venda</p>
+    <main>
+        <section class="tables-section">
+            <app-table width="40vw" [clickFunc]="openNovaVendaModal">
+                <p btn-text>Adicionar registro de venda</p>
 
-            <tr table-header>
-                <th>Nome do comprador</th>
-                <th>Valor da compra</th>
-                <th>Tipo da compra</th>
-                <th>Data da venda</th>
-            </tr>
+                <tr table-header>
+                    <th>Nome do comprador</th>
+                    <th>Valor da compra</th>
+                    <th>Tipo da compra</th>
+                    <th>Data da venda</th>
+                </tr>
 
-            <tr table-data>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-        </app-table>
-        
-        <app-table width="40vw">
-            <p btn-text>Ver lista de devedores</p>
+                <tr table-data>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                </tr>
+            </app-table>
+            
+            <app-table width="40vw" [clickFunc]="openDevedoresModal">
+                <p btn-text>Ver lista de devedores</p>
 
-            <tr table-header>
-                <th>Nome do devedor</th>
-                <th>Valor da dívida</th>
-                <th>Data da dívida</th>
-            </tr>
+                <tr table-header>
+                    <th>Nome do devedor</th>
+                    <th>Valor da dívida</th>
+                    <th>Data da dívida</th>
+                </tr>
 
-            <tr table-data>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-        </app-table>
-    </section>
-</main>
+                <tr table-data>
+                    <td>asd</td>
+                    <td>asd</td>
+                    <td>asd</td>
+                </tr>
+            </app-table>
+        </section>
+    </main>
+
+    <app-modal-nova-venda [(isNovaVendaOpen)]="isNovaVendaModalOpen" />
+
+    <app-modal-registro-devedores [(isRegistroDevedoresOpen)]="isDevedoresModalOpen" />
+</body>
+</html>
