--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,6 +7,7 @@
             <a href="/home">Home</a>
             <a href="/vendas">Vendas</a>
             <a href="/estoque">Estoque</a>
+            <a href="/registroDevedores">Registro de Devedores</a>
         </ul>
     </div>
     <i class="ph ph-sign-out"></i>
