--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -16,6 +16,14 @@ main{
     width: 90%;
 }
 
+.table-actions-div{
+    font-size: 1.125rem;
+}
+
+.table-actions-div .ph-pencil-simple{
+    margin-right: 1rem;
+}
+
 .input-div{
     display: flex;
     flex-direction: column;
