feat: função de edição dos produtos "funcional"

--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -12,12 +12,12 @@ main{
     align-items: center;
 }
 
-.table{
-    width: 90%;
-}
-
 .table-actions-div{
     font-size: 1.125rem;
+}
+
+.table-actions-div .ph{
+    cursor: pointer;
 }
 
 .table-actions-div .ph-pencil-simple{
