--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -8,6 +8,7 @@
     [id]="inputID"
     [placeholder]="inputPlaceholder"
     [required]="required"
+    [value]="inputValue"
     [ngModel]="value"
     (ngModelChange)="onChange($event)"
     (blur)="onTouched()"
