--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -16,12 +16,14 @@
         </div>
     </div>
 
-    <table>
-        <thead>
-            <ng-content select="[table-header]"/>
-        </thead>
-        <tbody>
-            <ng-content select="[table-data]"/>
-        </tbody>
-    </table>
+    <div class="table-overflow-div" [style.height]="overflowHeight">
+        <table>
+            <thead>
+                <ng-content select="[table-header]"/>
+            </thead>
+            <tbody>
+                <ng-content select="[table-data]"/>
+            </tbody>
+        </table>
+    </div>
 </section>
